fix(UI/Settings): Fix minor bugs with the setting screen on mobile devices

--- a/app/src/ui/screens/SettingsScreen/SettingsScreen.css
+++ b/app/src/ui/screens/SettingsScreen/SettingsScreen.css
@@ -4,9 +4,10 @@
     scroll-snap-type: x mandatory;
     scroll-timeline: --mobile-settings-title;
     scroll-timeline-axis: inline;
+    overscroll-behavior: none;
 
     .dialog-close-btn {
-        @apply left-2 top-2 elevation-2 absolute;
+        @apply left-2 top-2 elevation-2 fixed;
         animation: mobile-settings-close-btn linear;
         animation-timeline: --mobile-settings-title;
         animation-fill-mode: both;
@@ -18,8 +19,13 @@
         }
     }
 
+    .dialog-drag-handle {
+        @apply fixed;
+        width: 200svw;
+    }
+
     .settings-tab-back-btn {
-        @apply absolute left-2 top-2 rounded-full aspect-square h-11 w-11 p-0;
+        @apply fixed left-2 top-2 rounded-full aspect-square h-11 w-11 p-0;
         z-index: 200;
         animation: mobile-settings-back-btn linear;
         animation-timeline: --mobile-settings-title;
@@ -41,6 +47,9 @@
             @apply mb-0 p-2 w-full text-3xl xs:p-4 xs:py-3;
         }
 
+        pointer-events: none;
+        user-select: none;
+        -webkit-user-select: none;
         animation: mobile-settings-title-fade-out linear;
         animation-timeline: --mobile-settings-title;
         animation-fill-mode: both;
@@ -171,7 +180,8 @@
     scroll-snap-align: start;
 
     &::after {
-        @apply bg-surface-level-2 rounded-xl block content-[""] absolute -z-1 inset-2 top-16 bottom-14;
+        @apply bg-surface-level-2 rounded-xl block content-[""] absolute -z-1 inset-2 top-16;
+        bottom: env(safe-area-inset-bottom, calc(var(--spacing) * 4));
     }
 
     @media (min-width: 768px) {
@@ -181,19 +191,26 @@
 
         &::after {
             @apply hidden;
+            content: unset;
         }
     }
 }
 
 .settings-tab-list-item {
     @apply flex items-center py-4 px-2 w-full gap-2 rounded-xl;
+    user-select: none;
+    -webkit-user-select: none;
 
     /* biome-ignore lint/style/noDescendingSpecificity: false positive? */
     .icon {
         @apply text-neutral;
     }
 
-    &:hover {
+    &[aria-disabled="true"] {
+        @apply hidden;
+    }
+
+    &:active {
         @apply bg-primary-light text-primary-contrast;
 
         .icon {
@@ -201,14 +218,19 @@
         }
     }
 
-    &[aria-disabled="true"] {
-        @apply hidden;
-    }
-
     @media (min-width: 768px) {
         @apply py-2 px-3 py-1;
+
         &[aria-selected="true"] {
             @apply bg-primary text-primary-contrast;
+            .icon {
+                @apply text-primary-contrast;
+            }
+        }
+
+        &:hover {
+            @apply bg-primary-light text-primary-contrast;
+
             .icon {
                 @apply text-primary-contrast;
             }
@@ -285,6 +307,12 @@
             animation: unset;
         }
     }
+}
+
+.settings-tab-header {
+    -webkit-user-select: none;
+    user-select: none;
+    pointer-events: none;
 }
 
 .settings-section {
@@ -383,6 +411,8 @@
     @apply rounded-2xl relative;
     @apply flex gap-2 items-center justify-center p-1 text-sm;
     @apply text-neutral-extra-dark dark:text-neutral-extra-light;
+    -webkit-user-select: none;
+    user-select: none;
 
     /* biome-ignore lint/style/noDescendingSpecificity: false positive? */
     .icon {
